--- a/src/Components/NavBar/NavBar.css
+++ b/src/Components/NavBar/NavBar.css
@@ -3,13 +3,21 @@
   padding: 0;
   box-sizing: border-box;
 }
+h1 {
+  color: rgb(48, 148, 103);
+  text-align: center;
+  text-decoration: underline;
+  font-size: 30px;
+  margin-top: 30px;
+  margin-bottom: 30px;
+}
 
 #menu li {
   display: inline-block;
   padding-left: 5px;
   padding-right: 5px;
   background-color: yellow;
-  margin: 10px 10px 10px 30px;
+  margin: 5px 5px 5px 15px;
   padding: 1px 3px 0px 3px;
   box-sizing: content-box;
   border-style: ridge;
@@ -53,4 +61,14 @@ ul li:hover ul {
   padding: 10px 10px 10px 10px;
   border-radius: 15px;
   background-color: rgba(0, 0, 0, 0.5);
+}
+
+.material-symbols-outlined {
+  padding: 15px 15px 15px 15px;
+  size: 200px;
+}
+.CartWidget {
+  max-width: fit-content;
+  max-height: fit-content;
+  font-variation-settings: "FILL" 1, "wght" 700, "GRAD" 200, "opsz" 48;
 }
