--- a/src/Components/ItemListConteiner/ItemListConteiner.css
+++ b/src/Components/ItemListConteiner/ItemListConteiner.css
@@ -22,5 +22,8 @@
 .contenedorHijo {
   background-color: rgba(0, 0, 0, 0.5);
   border-radius: 15px;
-  text-align: center;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  
 }
