--- a/src/Components/NavBar/NavBar.css
+++ b/src/Components/NavBar/NavBar.css
@@ -2,6 +2,7 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  
 }
 h1 {
   color: rgb(48, 148, 103);
@@ -12,7 +13,7 @@ h1 {
   margin-bottom: 30px;
 }
 
-#menu li {
+.menu li {
   display: inline-block;
   padding-left: 5px;
   padding-right: 5px;
@@ -63,7 +64,7 @@ ul li:hover ul {
   background-color: rgba(0, 0, 0, 0.5);
 }
 
-.material-symbols-outlined {
+ .material-symbols-outlined {
   padding: 15px 15px 15px 15px;
   size: 200px;
 }
@@ -72,3 +73,4 @@ ul li:hover ul {
   max-height: fit-content;
   font-variation-settings: "FILL" 1, "wght" 700, "GRAD" 200, "opsz" 48;
 }
+ 
